fixing alignment

--- a/qr-code-component/qr-code-component-main/index.css
+++ b/qr-code-component/qr-code-component-main/index.css
@@ -54,7 +54,7 @@ body {
     text-align: center;
     padding-left: 5%;
     padding-right: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
     margin-top: 0;
 }
 
@@ -62,7 +62,7 @@ body {
     aspect-ratio: 1/1;
     width: 80%; 
     border-radius: 20px;
-    margin-top: 5%;
+    margin-top: 10%;
 }
 
 @media (max-width:375px) {
